Update footer badge branding

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <input type="hidden" id="uf" value="{{ $json.uf }}" />
     <header class="site-header">
       <div class="container">
-        <span class="badge-open">Secretaria de Administração - SAD • Recife</span>
+        <span class="badge-open">Secretaria de Administração - SAD • Prefeitura do Recife</span>
         <h1 class="display-6 fw-semibold mt-3">Seleção Simplificada Hospital Veterinário do Recife</h1>
         <p class="lead mt-2">
           A SECRETARIA DE ADMINISTRAÇÃO e o GABINETE DE PROTEÇÃO E DEFESA DOS ANIMAIS, com fundamento no Decreto nº XXXXX, de XX de XXXXXXXX de 2025,
